# PredictCel

./: README.md  pyproject.toml  railway.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml  schedule.yml
config/: predictcel.example.json
data/: market_snapshots.example.json  wallet_candidates.json  wallet_trades.example.json
src/predictcel/: __init__.py  alerting.py  arb_sidecar.py  backtesting.py  basket_assignment.py  basket_controller.py  basket_manager.py  config.py  constants.py  copy_engine.py  cycle_runtime.py  cycle_support.py  discover_wallets.py  discovery.py  execution.py  live_inputs.py  main.py  markets.py  models.py  polymarket.py  railway.py  registry_runtime.py  runtime.py  scoring.py  storage.py  wallet_discovery.py  wallet_registry.py  wallet_sources.py  wallet_topics.py  wallets.py
tests/: test_alerting.py  test_arb_sidecar.py  test_basket_assignment.py  test_benchmark.py  test_config.py  test_copy_engine.py  test_cycle_runtime.py  test_discovery.py  test_execution.py  test_live_inputs.py  test_main.py  test_module_exports.py  test_polymarket.py  test_railway.py  test_runtime.py  test_scoring.py  test_storage.py  test_wallet_discovery.py  test_wallet_registry.py  test_wallet_topics.py
tests/fixtures/: __init__.py  data_api_trades.json  gamma_markets.json  leaderboard.json  orderbook_btc.json
tests/integration/: __init__.py  test_discovery_pipeline.py  test_polymarket_api.py
