[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "predictcel"
version = "0.1.0"
description = "Paper-mode basket consensus and arbitrage sidecar scaffold"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Celmaro" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]
trade = ["py-clob-client>=0.34.6"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
