[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "predictcel"
version = "0.1.0"
description = "Paper-mode basket consensus and arbitrage sidecar scaffold"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Celmaro" }]
dependencies = ["numpy>=1.24.0", "aiohttp>=3.9.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-benchmark>=4.0.0"]
trade = ["py-clob-client>=0.34.6"]
cache = ["redis>=4.5.0"]
ml = ["scikit-learn>=1.3.0", "pandas>=2.0.0", "statsmodels>=0.14.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
